--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,18 @@
 .idea/
+
+# cmake stuff
 cmake-build-debug/
+CMakeFiles
+cmake_install.cmake
+CMakeCache.txt
+Makefile
+*.so
+
+# Compiled objects
+*.so
+**/mutgos_server/mutgos_server
+**/mutgos_server/mutgos.db
+**/read_dump/readdump
+**/angelscript_test/angelscript_td
+**/vheap_test/vheap_td
+
