Add an initial implementation of SSL
This is a proof of concept. Known issues right now is it replaces the 7072 port rather than supplanting it.
Also if there's a disconnect during the handshake, it kills the server (replicable by connecting with `nc` and ctrl-c'ing out)

--- a/src/socketcomm/CMakeLists.txt
+++ b/src/socketcomm/CMakeLists.txt
@@ -8,4 +8,5 @@ target_link_libraries(
         mutgos_logging
         mutgos_osinterface
         mutgos_utilities
-        mutgos_text)
+        mutgos_text
+        ssl)
