--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 .idea/
+.vscode
 
 # cmake stuff
 cmake-build-debug/
@@ -8,10 +9,17 @@ CMakeCache.txt
 Makefile
 *.so
 
-# Compiled objects
+# User database files
 mutgos.db
+mutgos.db-shm
+mutgos.db-wal
+
+# Compiled objects
 *.so
 **/mutgos_server/mutgos_server
 **/read_dump/readdump
 **/angelscript_test/angelscript_td
 **/vheap_test/vheap_td
+
+# Make sure the user can't check in their certificate
+server.pem
