Add in a C++ implementation of bcrypt
Based on https://github.com/trusch/libbcrypt/
with windows code and assembly stripped out
along with non-library targets, and the
files re-organized to match the mutgos structure.

No (intentional) changes to the code logic.

Not linked in yet.

--- a/src/dbtypes/CMakeLists.txt
+++ b/src/dbtypes/CMakeLists.txt
@@ -4,6 +4,7 @@ add_library(mutgos_dbtypes SHARED ${DBTYPES_SRC})
 
 target_link_libraries(
     mutgos_dbtypes
+        mutgos_bcrypt
         mutgos_utilities
         mutgos_osinterface
         mutgos_concurrency
