--- a/src/executor/CMakeLists.txt
+++ b/src/executor/CMakeLists.txt
@@ -5,4 +5,5 @@ add_library(mutgos_executor SHARED ${EXECUTOR_SRC})
 target_link_libraries(
     mutgos_executor
         mutgos_logging
+        mutgos_utilities
         mutgos_osinterface)
