--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,6 @@ CMakeFiles
 cmake_install.cmake
 CMakeCache.txt
 Makefile
-*.so
 
 # User database files
 mutgos.db
@@ -22,4 +21,4 @@ mutgos.db-wal
 **/vheap_test/vheap_td
 
 # Make sure the user can't check in their certificate
-server.pem
+*.pem
